# warframe-damage-calculator

./: .gitignore  API.txt  ARCHITECTURE.md  CHECKLIST.md  DEV_WORKFLOW.md  LICENSE.gnumeric  README.md  _clean_pycache.py  _rewrite_on_disk.py  _sim_fire_loop.py  _test.py  checklist.md  pyproject.toml  test_output.txt  test_run_out.txt
database/: arcanes.json  database.json  melees.json  mods.json  primaries.json  secondaries.json
database_builder/: build_database_reformat.py
examples/: corinth_prime.py  dual_toxocyst_incarnon.py  kuva_chakkhur.py  kuva_nukor.py  paracesis_vs_sentients.py  prisma_skana_incarnon.py
scripts/: build_all.py  build_arcanes.py  build_database.py  build_melees.py  build_mods.py  build_primaries.py  build_secondaries.py  builder_helpers.py
tests/: test_all.py  test_arsenal.py  test_build.py  test_calculator_architecture.py  test_canonical_database.py  test_database.py  test_database_loader.py  test_dist.py  test_helpers.py  test_loader.py  test_melee.py  test_package_architecture.py  test_primary.py  test_public_api.py  test_ranged.py  test_regressions.py  test_secondary.py  test_upgrade_resolver.py  tester_helpers.py
warframe_damage_calculator/: __init__.py  database.py  dist.py  melee.py  primary.py  protocols.py  ranged.py  secondary.py  states.py  upgrade.py  weapon.py
warframe_damage_calculator/calculators/: __init__.py  attack_calculator.py  attack_tree.py  build_calculator.py  contributions.py  damage_calculator.py  effect_resolution.py  evolution_calculator.py  formulas.py  helpers.py  melee_calc.py  melee_calculator.py  primary_calc.py  primary_calculator.py  ranged_calc.py  ranged_calculator.py  scalar_calculator.py  secondary_calc.py  secondary_calculator.py  stat_aggregation.py  status_model.py  upgrade_calculator.py  upgrade_resolver.py  weapon_calc.py  weapon_calculator.py
warframe_damage_calculator/core/: data.py  dist.py  dist_data.py
warframe_damage_calculator/data/: __init__.py  access.py  bundled_names.py  construction.py  database_loader.py  loader.py  matching.py  normalization.py  paths.py  schema.py
warframe_damage_calculator/database/: __init__.py  database.json  database_loader.py
warframe_damage_calculator/examples/: acceltra_prime.py  kuva_chakkurr.py  prisma_skana_incarnon.py
warframe_damage_calculator/fields/: __init__.py  __init__.pyi  attack_result.py  calculated.py  damage_fields.py  evolution.py  melee_field.py  melee_fields.py  primary_field.py  primary_fields.py  ranged_field.py  ranged_fields.py  secondary_field.py  secondary_fields.py  upgrade.py  weapon_data.py  weapon_field.py  weapon_fields.py  weapon_input.py
warframe_damage_calculator/formatters/: __init__.py  melee_formatter.py  primary_formatter.py  ranged_formatter.py  secondary_formatter.py  weapon_formatter.py
warframe_damage_calculator/loader/: bundled_names.py  construction.py  loader.py  matching.py  normalization.py  paths.py  schema.py
warframe_damage_calculator/mechanics/: __init__.py  addable.py  constants.py  dist.py  functions.py  states.py
warframe_damage_calculator/models/: __init__.py  build.py  data.py  dist.py  fields.py  melee.py  primary.py  ranged.py  record.py  secondary.py  (+3 more)
(+30 files in other folders)
