[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-damage-calculator"
version = "0.3.1"
description = "Average DPS/DPH calculator for Warframe weapons."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = [
    "streamlit>=1.47.0",
]

authors = [
    { name = "Marcos Escobar Sánchez-Ocaña" }
]

keywords = [
    "warframe",
    "damage",
    "dps",
    "calculator"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["warframe_damage_calculator*"]
