[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-damage-calculator"
dynamic = ["version"]
description = "Average DPS/DPH calculator for Warframe weapons."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }

authors = [
    { name = "Marcos Escobar Sánchez-Ocaña" }
]

keywords = [
    "warframe",
    "damage",
    "dps",
    "calculator"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["warframe_damage_calculator*"]

[tool.setuptools.package-data]
"warframe_damage_calculator.data" = ["database/*.json"]

[tool.setuptools.dynamic]
version = {attr = "warframe_damage_calculator.__version__"}
